@@ -1,5 +1,9 @@
 2005-03-16  Lutz Mueller <lutz@users.sourceforge.net>
 
+	* libexif/exif-entry.c: Fix #1051994.
+
+2005-03-16  Lutz Mueller <lutz@users.sourceforge.net>
+
 	* libexif/exif-entry.c: Marked some strings for translation. Fix #803191.
 
 2005-03-13  Jan Patera <patera@users.sourceforge.net>
